# river-utils

./: .coverage  .flake8  .gitignore  LICENSE  Makefile  README.md  base.sh  pyproject.toml  requirements.txt  river_setup.sh  setup.py  setup.sh
.github/workflows/: build-on-release.yaml  test.yaml
install/: setup.sh
river/: cloud.py  const.py  job.py  main.py  objects.py
river/patterns/: allow_access.sh  clone.sh  job.template  nf_core.sh
river/templates/: job.template
river/utils/: job_create.py  job_nf_core.py  job_state.py
slurm/: Dockerfile  Readme.developer.md  job.sh  my.cnf  river-1.0.0-py3-none-any.whl  slurm.conf  slurmdbd.conf  start-services.sh  test-slurmdbd.sh
slurm/.ssh/: id_rsa  id_rsa.pub
src/: cli.py  setup.sh
src/cloud/: main.py  s3.py
src/job/: main.py  monitor_state.py
src/job/objs/: creator.py  job.py
src/job/templates/: job.template
src/job/utils/: create.py  state.py
src/river/: cli.py
src/river/cloud/: main.py
src/river/job/templates/: job.template
src/river/job/utils/: create.py  state.py
src/river/setup/: main.py
src/script/: create.py
src/script/templates/: access_header.template  default_header.template  s3.template
src/setup/: main.py  setup.py
src/tests/: conftest.py  test_cloud_s3_config.py  test_job_create.py  test_job_state.py  test_setup_install.py
tests/: .gitignore  conftest.py  test_cloud_s3_config.py  test_job_create.py  test_job_nf_core_config.py  test_job_state.py  test_script_create.py
tests/data/job/: access.sh  non-ui.sh  overwrite_url.sh
tests/river_home/: .river.sh
utilities/: generate_scripts.py  get_job_state.py  get_job_states.py  s3_cloud.sh  s3_config.sh  s3_umount.sh
(+20 files in other folders)
