[tool.poetry]
name = "river"
version = "1.0.5"
description = "The tool kit for utilizing data analysis via river"
readme = "README.md"
authors = ["Thanh-Giang (River) Tan Nguyen <nttg8100@gmail.com>"]
license = "MIT"
homepage = "https://github.com/giangbioinformatics/river-utils.git"
repository = "https://github.com/giangbioinformatics/river-utils.git"
keywords = ["data storage", "data analysis", "data infrastructure"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
[tool.poetry.dependencies]
python = ">=3.7"
typer = ">=0.14.0"
python-dotenv = ">=1.0.1"

[tool.poetry.scripts]
river = "river.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"